# stringozzi

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  build.bat  build.sh  build_all.bat  codecov.yml
docs/: Doxyfile
include/: Stringozzi.h  parser.h
src/: Stringozzi.cpp  parser.cpp
test/: Stringozzi.test.cpp  parser.test.cpp
