#********************************************************
# General Configuration
#********************************************************
CMAKE_MINIMUM_REQUIRED (VERSION 3.0)

#SET(CMAKE_CONFIGURATION_TYPES ${CMAKE_BUILD_TYPE} CACHE STRING "" FORCE)

PROJECT(stringozzi
        DESCRIPTION "C++ Parsing Expression grammer library for parsing/searching/validating like Regular Expression"
        LANGUAGES CXX)

#********************************************************
# Compiler Configuration
#********************************************************
INCLUDE_DIRECTORIES( include/ )


SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE 	${CMAKE_CURRENT_LIST_DIR}/dist/bin/${CMAKE_HOST_SYSTEM_NAME}_${CMAKE_BUILD_TYPE}_${ARCH})
SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE  	${CMAKE_CURRENT_LIST_DIR}/dist/lib/${CMAKE_HOST_SYSTEM_NAME}_${CMAKE_BUILD_TYPE}_${ARCH})
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE 	${CMAKE_CURRENT_LIST_DIR}/dist/bin/${CMAKE_HOST_SYSTEM_NAME}_${CMAKE_BUILD_TYPE}_${ARCH})
SET( CMAKE_DOCS_OUTPUT_DIRECTORY 		${CMAKE_CURRENT_LIST_DIR}/doc)
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG 	${CMAKE_CURRENT_LIST_DIR}/dist/bin/${CMAKE_HOST_SYSTEM_NAME}_${CMAKE_BUILD_TYPE}_${ARCH})
SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG  	${CMAKE_CURRENT_LIST_DIR}/dist/lib/${CMAKE_HOST_SYSTEM_NAME}_${CMAKE_BUILD_TYPE}_${ARCH})
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG 	${CMAKE_CURRENT_LIST_DIR}/dist/bin/${CMAKE_HOST_SYSTEM_NAME}_${CMAKE_BUILD_TYPE}_${ARCH})


#********************************************************
# Stringozzi
#********************************************************
ADD_LIBRARY( stringozzi-static			src/Stringozzi.cpp )
ADD_LIBRARY( stringozzi-shared SHARED	src/Stringozzi.cpp )



ADD_SUBDIRECTORY(googletest/ ./bin  EXCLUDE_FROM_ALL)
set_target_properties(gtest PROPERTIES 
            LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_LIST_DIR}/bin.tmp/${CMAKE_HOST_SYSTEM_NAME}/${CMAKE_BUILD_TYPE}/${ARCH}
            RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_LIST_DIR}/bin.tmp/${CMAKE_HOST_SYSTEM_NAME}/${CMAKE_BUILD_TYPE}/${ARCH}
            ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_LIST_DIR}/bin.tmp/${CMAKE_HOST_SYSTEM_NAME}/${CMAKE_BUILD_TYPE}/${ARCH}
            LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_LIST_DIR}/bin.tmp/${CMAKE_HOST_SYSTEM_NAME}/${CMAKE_BUILD_TYPE}/${ARCH}
            RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_LIST_DIR}/bin.tmp/${CMAKE_HOST_SYSTEM_NAME}/${CMAKE_BUILD_TYPE}/${ARCH}
            ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_LIST_DIR}/bin.tmp/${CMAKE_HOST_SYSTEM_NAME}/${CMAKE_BUILD_TYPE}/${ARCH}

            )

ADD_EXECUTABLE(stringozzi.test test/Stringozzi.test.cpp src/Stringozzi.cpp)
TARGET_LINK_LIBRARIES(stringozzi.test gtest)
set_target_properties(stringozzi.test PROPERTIES  
            LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_LIST_DIR}/bin.tmp/${CMAKE_HOST_SYSTEM_NAME}/${CMAKE_BUILD_TYPE}/${ARCH}
            RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_LIST_DIR}/bin.tmp/${CMAKE_HOST_SYSTEM_NAME}/${CMAKE_BUILD_TYPE}/${ARCH}
            ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_LIST_DIR}/bin.tmp/${CMAKE_HOST_SYSTEM_NAME}/${CMAKE_BUILD_TYPE}/${ARCH}
            LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_LIST_DIR}/bin.tmp/${CMAKE_HOST_SYSTEM_NAME}/${CMAKE_BUILD_TYPE}/${ARCH}
            RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_LIST_DIR}/bin.tmp/${CMAKE_HOST_SYSTEM_NAME}/${CMAKE_BUILD_TYPE}/${ARCH}
            ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_LIST_DIR}/bin.tmp/${CMAKE_HOST_SYSTEM_NAME}/${CMAKE_BUILD_TYPE}/${ARCH}
)

ENABLE_TESTING()
ADD_TEST(stringozzi.test stringozzi.test)


IF(STRINGOZZI_TRAVIS_BUILD)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g ")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftest-coverage")
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage")
ENDIF()